# libat

./: .licenserc.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: addlicense.yml  ci.yml  release.yml
examples/: basic_modem.cpp
include/at/: gsm7.hpp  parser.hpp  version.hpp.in
tests/: test_gsm7.cpp  test_parser.cpp
